<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/EmaileditText"
        android:layout_width="332dp"
        android:layout_height="48dp"
        android:layout_marginStart="99dp"
        android:layout_marginLeft="99dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="99dp"
        android:layout_marginRight="99dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintDimensionRatio="5:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <EditText
        android:id="@+id/Password_editText"
        android:layout_width="329dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintDimensionRatio="5:1"
        app:layout_constraintEnd_toEndOf="@+id/EmaileditText"
        app:layout_constraintStart_toStartOf="@+id/EmaileditText"
        app:layout_constraintTop_toBottomOf="@+id/EmaileditText" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="146dp"
        android:layout_height="111dp"
        android:layout_marginStart="103dp"
        android:layout_marginLeft="103dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="103dp"
        android:layout_marginRight="103dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_facebook" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/login_to_facebook"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/Login_button"
        android:layout_width="332dp"
        android:layout_height="56dp"
        android:layout_marginTop="100dp"
        android:text="@string/login"
        app:layout_constraintDimensionRatio="5:1"
        app:layout_constraintEnd_toEndOf="@+id/Password_editText"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/Password_editText"
        app:layout_constraintTop_toBottomOf="@+id/Password_editText" />
</androidx.constraintlayout.widget.ConstraintLayout>